--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
 
     // Environment Settings
     "module": "nodenext",
+    "moduleResolution": "nodenext",
     "esModuleInterop": true,
     // Other Outputs
     "sourceMap": true,
@@ -25,5 +26,7 @@
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
     "skipLibCheck": true
-  }
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "**/*.test.ts"]
 }
