--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "main": "src/server.ts",
   "type": "module",
   "scripts": {
-    "dev": "node --loader ts-node/esm --enable-source-maps src/server.ts",
-    "dev:watch": "nodemon --exec node --loader ts-node/esm --enable-source-maps src/server.ts",
+    "dev": "tsx src/server.ts",
+    "dev:watch": "nodemon --exec tsx src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
     "migrate": "npx tsx src/database/migrations/run-migrations.ts",
-    "db:up": "docker-compose up -d postgres",
-    "db:down": "docker-compose down",
-    "db:logs": "docker-compose logs -f postgres"
+    "db:up": "docker compose up -d postgres",
+    "db:down": "docker compose down",
+    "db:logs": "docker compose logs -f postgres"
   },
   "author": "DimaChekashov",
   "license": "ISC",
@@ -21,7 +21,7 @@
     "express": "^5.2.1",
     "nodemon": "^3.1.11",
     "pg": "^8.16.3",
-    "ts-node": "^10.9.2"
+    "tsx": "^4.21.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
