--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express": "^5.2.1",
     "nodemon": "^3.1.11",
     "pg": "^8.16.3",
-    "tsx": "^4.21.0"
+    "tsx": "^4.21.0",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
